--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             }
         },
         formatUpdated: '{YYYY}-{MM}-{DD} {HH}:{mm}',
+        homepage: 'foreword.md',
         markdown: {
             renderer: {
                 code: function (code, lang) {
