--- a/index.html
+++ b/index.html
@@ -4,46 +4,36 @@
 <meta charset="UTF-8">
 <title>Figma Scripter 编程</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <link rel="icon" href="assets/icon.png">
 <meta name="keywords" content="figma, scripter, script, scripting, 脚本, 编程">
 <meta name="description" content="Figma Scripter 编程 -- 用代码加速工作效率">
 <link rel="stylesheet" href="assets/style.css">
 <script src="assets/mermaid.min.js"></script>
 <style>
-:root {
-    --theme-color: #028ce7;
+.search {
+    margin-bottom: 0 !important;
+    padding: 4px 8px !important;
+    border-bottom: 1px solid rgba(0,0,0,0.07) !important;
 }
 .search input:focus {
     border: 1px solid transparent !important;
     box-shadow: none !important;
 }
-.docsify-copy-code-button {
-    opacity: 1 !important;
-    background: none !important;
+.search .results-panel {
+    padding: 8px;
 }
-.docsify-copy-code-button .label {
-    display: block;
-    width: 16px;
-    height: 16px;
-    overflow: hidden;
-    text-indent: -999px;
-    background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 3v13H4V3h11zm-1.5 1.5h-8v10h8v-10zM11 0v1.5H2.5V13H1V0h10z' fill='%23666'/%3E%3C/svg%3E");
+.search .search-keyword {
+    color: var(--theme-color);
+    font-weight: bold;
+    font-style: normal;
 }
-.docsify-copy-code-button .success {
-    background: #333333;
+.search .matching-post {
+    padding: 8px 0;
 }
-.docsify-copy-code-button .error {
-    background: #EE0000;
-}
-.docsify-copy-code-button .error,
-.docsify-copy-code-button .success {
-    left: auto !important;
-    right: 0;
-}
-.docsify-copy-code-button.error .error,
-.docsify-copy-code-button.success .success {
-    transform: translate(-40px, -50%) !important;
+.search h2 {
+    font-size: 14px !important;
+    margin: 0 0 8px !important;
 }
 .mermaid {
     padding: 0 !important;
@@ -114,21 +104,30 @@
                 }
             }
         },
-        copyCode: {
-            buttonText: 'COPY',
-            errorText: '拷贝失败',
-            successText: '已拷贝'
+        pagination: {
+            previousText: '上一章节',
+            nextText: '下一章节',
+            crossChapter: true,
         },
         plugins: [
             (hook, vm) => {
+                const tocToggle = document.createElement('button');
+                const toc = document.createElement('ul');
+                tocToggle.className = 'toc-toggle';
+                toc.className = 'toc';
+                document.body.appendChild(tocToggle);
+                document.body.appendChild(toc);
+                document.addEventListener('click', e => {
+                    if (!e.path.includes(toc) && !e.path.includes(tocToggle)) {
+                        toc.style.opacity = '0';
+                        setTimeout(() => {
+                            toc.style.top = '0';
+                            toc.style.display = 'none';
+                        }, 200);
+                    }
+                });
                 hook.doneEach(() => {
-                    const toc = document.createElement('ul');
-                    toc.className = 'toc';
-                    document.body.insertBefore(toc, document.body.childNodes[0]);
-                    const tocToggle = document.createElement('button');
-                    tocToggle.className = 'toc-toggle';
-                    document.body.insertBefore(tocToggle, document.body.childNodes[0]);
-                    tocToggle.addEventListener('click', e => {
+                    tocToggle.onclick = () => {
                         toc.innerHTML = '';
                         const article = document.getElementById('main');
                         const headers = article.querySelectorAll('h1,h2,h3,h4,h5,h6');
@@ -171,7 +170,6 @@
                                 toc.style.top = '0';
                                 toc.style.display = 'none';
                             }, 200);
-
                         } else {
                             toc.style.display = 'block';
                             setTimeout(() => {
@@ -179,16 +177,7 @@
                                 toc.style.opacity = '1';
                             }, 1);
                         }
-                    });
-                    document.addEventListener('click', e => {
-                        if (!e.path.includes(toc) && !e.path.includes(tocToggle)) {
-                            toc.style.opacity = '0';
-                            setTimeout(() => {
-                                toc.style.top = '0';
-                                toc.style.display = 'none';
-                            }, 200);
-                        }
-                    });
+                    };
                 });
             }
         ]
@@ -197,7 +186,6 @@
 <script src="//unpkg.com/docsify"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//unpkg.com/prismjs/components/prism-typescript.js"></script>
-<script src="//unpkg.com/docsify-copy-code@2"></script>
 <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
 </body>
 </html>
