添加编辑属性，绘图

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     color: var(--theme-color);
     font-weight: bold;
     font-style: normal;
+    text-transform: lowercase;
 }
 .search .matching-post {
     padding: 8px 0;
